Bug 261967 - Some text practically unreadable when using non-Air Oxygen desktop theme
Summary: Some text practically unreadable when using non-Air Oxygen desktop theme
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-battery (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-03 16:00 UTC by JR
Modified: 2011-12-04 14:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Oxygen-themed plasma tooltip with dark grey text on black gradient background (26.95 KB, image/png)
2011-01-03 16:00 UTC, JR
Details
Additional screenshot, this time of the network management widget (39.90 KB, image/png)
2011-01-03 16:02 UTC, JR
Details
Additional screenshot, device notifier widget (22.96 KB, image/png)
2011-01-03 16:05 UTC, JR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description JR 2011-01-03 16:00:47 UTC
Created attachment 55520 [details]
Oxygen-themed plasma tooltip with dark grey text on black gradient background

Version:           unspecified (using KDE 4.5.90) 
OS:                Linux

Kubuntu 10.10, KDE 4.5.90 packages from kubuntu beta ppa.

When using the non-Air vintage Oxygen desktop theme, certain text labels in all tray-embedded plasmoids are practically unreadable. They show as dark grey on Oxygen's gradient black tooltip background, with no glow to highlight them and make them more readable.

Reproducible: Always

Steps to Reproduce:
1. Set the desktop theme to Air
2. Add a Battery widget to your system tray and click it
3. Note text labels' visibility
4. Set the desktop theme to Oxygen
5. Click same Battery widget

Actual Results:  
6. Certain text labels, such as "Battery: n%" and "AC Adapter: Plugged in" are in dark grey against a black background, and as such they're very hard to read

Expected Results:  
6. All text labels are clearly readable...
6a: in white or light grey against the blackish background
6b: with bright glow around the dark grey text, highlighting it

See the attached screenshot.

I tried different color schemes but the only thing that seemed to differ was whether the text for the Sleep and Hibernate buttons had glow. (As a sidenote, those were white to begin with, so in this combination the glow was a nice artistic touch but not necessary to highlight the text.)
Comment 1 JR 2011-01-03 16:02:38 UTC
Created attachment 55521 [details]
Additional screenshot, this time of the network management widget
Comment 2 JR 2011-01-03 16:05:03 UTC
Created attachment 55522 [details]
Additional screenshot, device notifier widget

Please reassign this bug if it's not related to this component. I see it also happens to battery widgets outside of the system tray.
Comment 3 Kevin 2011-02-09 00:05:01 UTC
I also have this bug. I haven't found any usable dark themes.
Comment 4 Kevin 2011-03-07 08:49:23 UTC
This bug is still present in 4.6.1
Comment 5 Maarten 2011-06-14 22:46:56 UTC
I have this exact same bug. It drives me crazy, renders KDE almost unusable at this point. (And why is this still "unconfirmed" after 5 months ...?)
What can I do to help speed this along to resolution ? Or, at least, to "confirmed" if nothing else...
Comment 6 Aaron J. Seigo 2011-12-04 00:42:56 UTC
note that on re-starting plasma-desktop, it is perfectly readable. the battery plasmoid simply isn't resetting these text colours on theme change.
Comment 7 Aaron J. Seigo 2011-12-04 13:00:45 UTC
Git commit 9b3f350b290cd882be43dadba27a405c79731b59 by Aaron Seigo.
Committed on 04/12/2011 at 13:55.
Pushed by aseigo into branch 'KDE/4.7'.

the palette gets updated by all sorts of events on the scene now (incl. reparenting!), so make sure the palette is _really_ changing before marking it as custom

this fixes widget colours not updating with theme changes -> if, for instance, an offscreen widget is created, this results in a reparenting (to null)
and that in turn creates a palette changed event ... which was being intepretted as a custom palette being set and that would disable future updates
due to theme changes.

this also introduces a small helper which computes the palettes once for use by all widgets as a small performance improvement.

BUG:261967

M  +1    -0    plasma/CMakeLists.txt
A  +85   -0    plasma/private/themedwidgetinterface.cpp     [License: LGPL (v2+)]
M  +41   -31   plasma/private/themedwidgetinterface_p.h

http://commits.kde.org/kdelibs/9b3f350b290cd882be43dadba27a405c79731b59
Comment 8 Aaron J. Seigo 2011-12-04 14:05:47 UTC
@Maarten: "And why is this still "unconfirmed" after 5 months ...?"

because we have fewer people working on plasma relative to those using it to keep up with every report that comes in quickly.

more people helping with bug triage can do wonders, as can be seen from the plasma bug days held this weekend where over 300 reports were tested / fixed and closed. if you are not happy with how quickly things are going, i strongly encourage you to get involved. it's a fun and meaningful way to give back to others :)